fix(CheckoutService): 맴버십 할인 계산 수정
맴버십 할인은 "프로모션 미적용"상품에만 적용한다.
("프로모션 미적용 삼품에서"를 "총 결재 금액에서"로 잘못 이해함에 따라 수정)